RESOLVED FIXED311531
[Navigation API] Break up innerDispatchNavigateEvent into logical helpers
https://bugs.webkit.org/show_bug.cgi?id=311531
Summary [Navigation API] Break up innerDispatchNavigateEvent into logical helpers
Basuke Suzuki
Reported 2026-04-05 10:47:38 PDT
innerDispatchNavigateEvent() is 278 lines with 9 logical sections, nested lambdas, and complex control flow. Extract 3 methods: handleSameDocumentNavigation() (92 lines), setupInterceptionState() (46 lines), and createNavigateEvent() (55 lines). This is a pure structural refactoring with no behavior change, done to improve readability and make future changes (like the microtask timing fix in bug 311298) easier to review.
Attachments
Basuke Suzuki
Comment 1 2026-04-05 10:50:06 PDT
Basuke Suzuki
Comment 2 2026-04-05 11:44:58 PDT
EWS
Comment 3 2026-04-05 18:01:20 PDT
Committed 310617@main (c0722f0a0eda): <https://commits.webkit.org/310617@main> Reviewed commits have been landed. Closing PR #62082 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.