[Navigation API] Break up innerDispatchNavigateEvent into logical helpers https://bugs.webkit.org/show_bug.cgi?id=311531 rdar://174120905

Reviewed by Simon Fraser.

Extract two methods from innerDispatchNavigateEvent() to improve readability:

- setupInterceptionState(): Handles NavigateEvent interception setup including
  transition creation and type-specific navigation state updates (Traverse,
  Reload, Push/Replace). ~40 lines extracted.

- handleSameDocumentNavigation(): Handles same-document navigation handler
  invocation, promise settlement via waitForAllPromises, and dispatching
  navigatesuccess/navigateerror events. ~90 lines extracted.

This is a pure structural refactoring with no behavior change. The extracted
methods are called from innerDispatchNavigateEvent() at the same points where
the inline code previously existed.

* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::setupInterceptionState):
(WebCore::Navigation::handleSameDocumentNavigation):
(WebCore::Navigation::innerDispatchNavigateEvent):
* Source/WebCore/page/Navigation.h:

Canonical link: https://commits.webkit.org/310617@main